<resources>
    <string name="app_name">capstone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_tim_lai">Tìm lại</string>
    <string name="title_tim_nha_thuoc">Tìm nhà thuốc</string>
    <string name="myAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="google_plus_client">712086950733-d7r7h8mfhdef0b27jotufnrtlvdvhtd5.apps.googleusercontent.com</string>
    <string name="title_trangchu">Trang Chủ</string>
    <string name="title_thongbao">Thông Báo</string>
    <string name="title_setting">Chọn Phòng Khám</string>
    <string name="title_datlich">Đặt Lịch</string>
    <string name="title_logout">Đăng Xuất</string>
    <string name="title_fclinic">F-Clinic</string>
    <string name="title_info">Thông tin</string>
    <string name="title_canhan">Toa thuốc</string>
    <string name="title_gioithieu">Giới Thiệu</string>
    <string name="title_datlich_">Đặt lịch</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ctthuoc">CTThuoc</string>

</resources>
